--- a/src/app/modules/discovery/discovery.component.ng.scss
+++ b/src/app/modules/discovery/discovery.component.ng.scss
@@ -1,7 +1,6 @@
 @import 'defaults.scss';
-// @import '../../common/layout/layout.scss';
 
-$layoutMax2ColWidth: '1039px'; //ojm
+$layoutMax2ColWidth: '1039px';
 
 :host {
   &.m-discovery--activityV2 {
