--- a/src/app/modules/newsfeed/activity-v2/owner-block/owner-block.component.ng.scss
+++ b/src/app/modules/newsfeed/activity-v2/owner-block/owner-block.component.ng.scss
@@ -76,6 +76,15 @@
   }
 
   // *********************************************
+  // ** MODAL **
+  // *********************************************
+  m-activityV2__modal & {
+    .m-activity__ownerBlock {
+      padding: 20px $modalScrollableContainerSpacing 0;
+    }
+  }
+
+  // *********************************************
   // ** SIDEBAR BOOST **
   // *********************************************
 
